# dodunderwriting

./: .gitignore  apikeys.py  app.py  devenv.nix  inject_train.py  output.csv  pyproject.toml  requirements.txt  test
assurifai/: models.py  prompts.py
charts/: finapi.py  utils.py
nix/: faiss-cpu.nix  finnhub-python.nix  fmpsdk.nix  pyxirr.nix  shell.nix
pages/: charts.py  test.py
